{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 831,
  "lineage": "7c7396ae-abf5-1b55-f323-6905778acb46",
  "resources": [
    {
      "module": "module.msk",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:security-group/sg-0e57eadaab32d756f",
            "description": "Security group for MSK cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e57eadaab32d756f",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "JMX monitoring",
                "from_port": 11001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11001
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Kafka broker communication (TLS)",
                "from_port": 9094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9094
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Kafka broker communication (plaintext)",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9092
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "Node Exporter for Prometheus monitoring",
                "from_port": 11002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11002
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "ZooKeeper communication",
                "from_port": 2181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2181
              }
            ],
            "name": "microservices-ecommerce-msk-sg",
            "name_prefix": "",
            "owner_id": "068856380156",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-msk-sg",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-msk-sg",
              "Project": "microservices-ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_lb.main",
            "module.network.aws_lb_listener.main",
            "module.network.aws_lb_listener_rule.services",
            "module.network.aws_lb_target_group.services",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_route_table.public",
            "module.network.aws_route_table_association.private",
            "module.network.aws_route_table_association.public",
            "module.network.aws_security_group.alb",
            "module.network.aws_security_group.ecs_services",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041354be3d1f67326",
            "arn": "arn:aws:ec2:us-east-1:068856380156:elastic-ip/eipalloc-041354be3d1f67326",
            "association_id": "eipassoc-0e533b2afc169659f",
            "domain": "vpc",
            "id": "eipalloc-041354be3d1f67326",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02d2037feddf38e36",
            "private_dns": "ip-172-31-29-105.ec2.internal",
            "private_ip": "172.31.29.105",
            "public_dns": "ec2-44-215-77-203.compute-1.amazonaws.com",
            "public_ip": "44.215.77.203",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-nat-eip-1",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-nat-eip-1",
              "Project": "microservices-ecommerce"
            }
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0539f89b7df00bffe",
            "arn": "arn:aws:ec2:us-east-1:068856380156:elastic-ip/eipalloc-0539f89b7df00bffe",
            "association_id": "eipassoc-09167cdbfea9fa478",
            "domain": "vpc",
            "id": "eipalloc-0539f89b7df00bffe",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09eaaedeff7166a87",
            "private_dns": "ip-172-31-39-179.ec2.internal",
            "private_ip": "172.31.39.179",
            "public_dns": "ec2-3-234-75-121.compute-1.amazonaws.com",
            "public_ip": "3.234.75.121",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-nat-eip-2",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-nat-eip-2",
              "Project": "microservices-ecommerce"
            }
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ead8ac0fa6421c0e",
            "arn": "arn:aws:ec2:us-east-1:068856380156:elastic-ip/eipalloc-0ead8ac0fa6421c0e",
            "association_id": "eipassoc-004ca0ba7e0a18548",
            "domain": "vpc",
            "id": "eipalloc-0ead8ac0fa6421c0e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d21168f1809fc816",
            "private_dns": "ip-172-31-3-124.ec2.internal",
            "private_ip": "172.31.3.124",
            "public_dns": "ec2-34-234-3-126.compute-1.amazonaws.com",
            "public_ip": "34.234.3.126",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-nat-eip-3",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-nat-eip-3",
              "Project": "microservices-ecommerce"
            }
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:internet-gateway/igw-037b323af9422f16b",
            "id": "igw-037b323af9422f16b",
            "owner_id": "068856380156",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-igw",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-igw",
              "Project": "microservices-ecommerce"
            },
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:loadbalancer/app/public-ms-balancer/fbb269a11188643e",
            "arn_suffix": "app/public-ms-balancer/fbb269a11188643e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-ms-balancer-992743410.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:068856380156:loadbalancer/app/public-ms-balancer/fbb269a11188643e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-ms-balancer",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0f9ea72b77b363a04"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0434cdb5aec53e770"
              },
              {
                "subnet_id": "subnet-0a99bec6e8cb20a88"
              },
              {
                "subnet_id": "subnet-0e75833a911eaba9c"
              }
            ],
            "subnets": [
              "subnet-0434cdb5aec53e770",
              "subnet-0a99bec6e8cb20a88",
              "subnet-0e75833a911eaba9c"
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "microservices-ecommerce"
            },
            "vpc_id": "vpc-0e7ec7a470f47bccd",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/frontedOne/7642d58d6f1e78ce",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:loadbalancer/app/public-ms-balancer/fbb269a11188643e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "microservices-ecommerce"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.main",
            "module.network.aws_lb_target_group.services",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "auth",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/auth-TG-P/0f3bee01ac80b97b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener-rule/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af/6c1d3330f2b6e40a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/auth/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener-rule/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af/6c1d3330f2b6e40a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af",
            "priority": 1,
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "microservices-ecommerce"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.main",
            "module.network.aws_lb_listener.main",
            "module.network.aws_lb_target_group.services",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "order",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/orders-TG-P/24ad70ed4094cd56",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener-rule/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af/273e438bd7a2162a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/orders/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener-rule/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af/273e438bd7a2162a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af",
            "priority": 2,
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "microservices-ecommerce"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.main",
            "module.network.aws_lb_listener.main",
            "module.network.aws_lb_target_group.services",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/payment-TG-P/6759efbf29e29be8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener-rule/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af/e0f1d0e06a5be09b",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/payments/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener-rule/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af/e0f1d0e06a5be09b",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af",
            "priority": 5,
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "microservices-ecommerce"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.main",
            "module.network.aws_lb_listener.main",
            "module.network.aws_lb_target_group.services",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "product",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/product-TG-P/e726293d28e87d58",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener-rule/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af/477e5c959a204696",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/products/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener-rule/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af/477e5c959a204696",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:listener/app/public-ms-balancer/fbb269a11188643e/e680545aed19f8af",
            "priority": 3,
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "microservices-ecommerce"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_lb.main",
            "module.network.aws_lb_listener.main",
            "module.network.aws_lb_target_group.services",
            "module.network.aws_security_group.alb",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "auth",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/auth-TG-P/0f3bee01ac80b97b",
            "arn_suffix": "targetgroup/auth-TG-P/0f3bee01ac80b97b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/auth-TG-P/0f3bee01ac80b97b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:068856380156:loadbalancer/app/public-ms-balancer/fbb269a11188643e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "auth-TG-P",
            "port": 8787,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "auth-TG-P",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "auth-TG-P",
              "Project": "microservices-ecommerce"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "client",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/frontedOne/7642d58d6f1e78ce",
            "arn_suffix": "targetgroup/frontedOne/7642d58d6f1e78ce",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/frontedOne/7642d58d6f1e78ce",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:068856380156:loadbalancer/app/public-ms-balancer/fbb269a11188643e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontedOne",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "frontedOne",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "frontedOne",
              "Project": "microservices-ecommerce"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "order",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/orders-TG-P/24ad70ed4094cd56",
            "arn_suffix": "targetgroup/orders-TG-P/24ad70ed4094cd56",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/orders-TG-P/24ad70ed4094cd56",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:068856380156:loadbalancer/app/public-ms-balancer/fbb269a11188643e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "orders-TG-P",
            "port": 8070,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "orders-TG-P",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "orders-TG-P",
              "Project": "microservices-ecommerce"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "payment",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/payment-TG-P/6759efbf29e29be8",
            "arn_suffix": "targetgroup/payment-TG-P/6759efbf29e29be8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/payment-TG-P/6759efbf29e29be8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:068856380156:loadbalancer/app/public-ms-balancer/fbb269a11188643e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "payment-TG-P",
            "port": 8060,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "payment-TG-P",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "payment-TG-P",
              "Project": "microservices-ecommerce"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": "product",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/product-TG-P/e726293d28e87d58",
            "arn_suffix": "targetgroup/product-TG-P/e726293d28e87d58",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:068856380156:targetgroup/product-TG-P/e726293d28e87d58",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:068856380156:loadbalancer/app/public-ms-balancer/fbb269a11188643e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "product-TG-P",
            "port": 8050,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "product-TG-P",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "product-TG-P",
              "Project": "microservices-ecommerce"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-041354be3d1f67326",
            "association_id": "eipassoc-0e533b2afc169659f",
            "connectivity_type": "public",
            "id": "nat-03bbdd3d1fdfd011c",
            "network_interface_id": "eni-02d2037feddf38e36",
            "private_ip": "172.31.29.105",
            "public_ip": "44.215.77.203",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0434cdb5aec53e770",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-nat-gw-1",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-nat-gw-1",
              "Project": "microservices-ecommerce"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0539f89b7df00bffe",
            "association_id": "eipassoc-09167cdbfea9fa478",
            "connectivity_type": "public",
            "id": "nat-0feb3e10207eb58c8",
            "network_interface_id": "eni-09eaaedeff7166a87",
            "private_ip": "172.31.39.179",
            "public_ip": "3.234.75.121",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a99bec6e8cb20a88",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-nat-gw-2",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-nat-gw-2",
              "Project": "microservices-ecommerce"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ead8ac0fa6421c0e",
            "association_id": "eipassoc-004ca0ba7e0a18548",
            "connectivity_type": "public",
            "id": "nat-0e9565df89f62ddb3",
            "network_interface_id": "eni-0d21168f1809fc816",
            "private_ip": "172.31.3.124",
            "public_ip": "34.234.3.126",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e75833a911eaba9c",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-nat-gw-3",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-nat-gw-3",
              "Project": "microservices-ecommerce"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:route-table/rtb-0413bb2ff0539681c",
            "id": "rtb-0413bb2ff0539681c",
            "owner_id": "068856380156",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03bbdd3d1fdfd011c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-private-rt-1",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-private-rt-1",
              "Project": "microservices-ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:route-table/rtb-05d41b600f8803d5a",
            "id": "rtb-05d41b600f8803d5a",
            "owner_id": "068856380156",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0feb3e10207eb58c8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-private-rt-2",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-private-rt-2",
              "Project": "microservices-ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:route-table/rtb-09a2ce08d99d65946",
            "id": "rtb-09a2ce08d99d65946",
            "owner_id": "068856380156",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e9565df89f62ddb3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-private-rt-3",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-private-rt-3",
              "Project": "microservices-ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:route-table/rtb-0f9f97d7f277f7b69",
            "id": "rtb-0f9f97d7f277f7b69",
            "owner_id": "068856380156",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037b323af9422f16b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-public-rt",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-public-rt",
              "Project": "microservices-ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b74c31bf04df55fc",
            "region": "us-east-1",
            "route_table_id": "rtb-0413bb2ff0539681c",
            "subnet_id": "subnet-0b267e128d38dd3c4"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e71d8fd2e89e105e",
            "region": "us-east-1",
            "route_table_id": "rtb-05d41b600f8803d5a",
            "subnet_id": "subnet-0d67c06c2b319904d"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f020c5f545d4a1e",
            "region": "us-east-1",
            "route_table_id": "rtb-09a2ce08d99d65946",
            "subnet_id": "subnet-0a5331ae248243ea2"
          },
          "dependencies": [
            "module.network.aws_eip.nat",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074828f9b1bd3c501",
            "region": "us-east-1",
            "route_table_id": "rtb-0f9f97d7f277f7b69",
            "subnet_id": "subnet-0434cdb5aec53e770"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0416aedd8e67f9908",
            "region": "us-east-1",
            "route_table_id": "rtb-0f9f97d7f277f7b69",
            "subnet_id": "subnet-0a99bec6e8cb20a88"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ad5dcc150d2b8b3",
            "region": "us-east-1",
            "route_table_id": "rtb-0f9f97d7f277f7b69",
            "subnet_id": "subnet-0e75833a911eaba9c"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:security-group/sg-0f9ea72b77b363a04",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9ea72b77b363a04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "microservices-ecommerce-alb",
            "name_prefix": "",
            "owner_id": "068856380156",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-alb-sg",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-alb-sg",
              "Project": "microservices-ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:security-group/sg-0ff1bb0c5c6b6962d",
            "description": "Security group for ECS services",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff1bb0c5c6b6962d",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f9ea72b77b363a04"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "microservices-ecommerce-ecs-services",
            "name_prefix": "",
            "owner_id": "068856380156",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-ecs-services-sg",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-ecs-services-sg",
              "Project": "microservices-ecommerce"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_security_group.alb",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:subnet/subnet-0b267e128d38dd3c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b267e128d38dd3c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068856380156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-private-subnet-1",
              "Project": "microservices-ecommerce",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-private-subnet-1",
              "Project": "microservices-ecommerce",
              "Type": "Private"
            },
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:subnet/subnet-0d67c06c2b319904d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d67c06c2b319904d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068856380156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-private-subnet-2",
              "Project": "microservices-ecommerce",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-private-subnet-2",
              "Project": "microservices-ecommerce",
              "Type": "Private"
            },
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:subnet/subnet-0a5331ae248243ea2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5331ae248243ea2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "068856380156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-private-subnet-3",
              "Project": "microservices-ecommerce",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-private-subnet-3",
              "Project": "microservices-ecommerce",
              "Type": "Private"
            },
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:subnet/subnet-0434cdb5aec53e770",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0434cdb5aec53e770",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068856380156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-public-subnet-1",
              "Project": "microservices-ecommerce",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-public-subnet-1",
              "Project": "microservices-ecommerce",
              "Type": "Public"
            },
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:subnet/subnet-0a99bec6e8cb20a88",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a99bec6e8cb20a88",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068856380156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-public-subnet-2",
              "Project": "microservices-ecommerce",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-public-subnet-2",
              "Project": "microservices-ecommerce",
              "Type": "Public"
            },
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:subnet/subnet-0e75833a911eaba9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e75833a911eaba9c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "068856380156",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-public-subnet-3",
              "Project": "microservices-ecommerce",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-public-subnet-3",
              "Project": "microservices-ecommerce",
              "Type": "Public"
            },
            "vpc_id": "vpc-0e7ec7a470f47bccd"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:068856380156:vpc/vpc-0e7ec7a470f47bccd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0e08e41f1aa2660c9",
            "default_route_table_id": "rtb-0d32e6e45a7a3f073",
            "default_security_group_id": "sg-09817b25546942162",
            "dhcp_options_id": "dopt-08f7f8f9029923b08",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e7ec7a470f47bccd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d32e6e45a7a3f073",
            "owner_id": "068856380156",
            "region": "us-east-1",
            "tags": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-vpc",
              "Project": "microservices-ecommerce"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Name": "microservices-ecommerce-vpc",
              "Project": "microservices-ecommerce"
            }
          }
        }
      ]
    }
  ]
}